--- a/base/ingress.yaml
+++ b/base/ingress.yaml
@@ -7,8 +7,10 @@ metadata:
 spec:
   rules:
   - host: k8s.nsfolk.info
-  - http:
+    http:
       paths:
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: demo
